Fixed displaying of the stream selector (the top menu overlapped when scrolling)

--- a/webapp/src/main/webapp/skin/smartactivity-admin.css
+++ b/webapp/src/main/webapp/skin/smartactivity-admin.css
@@ -21,7 +21,7 @@ body {
 #stream-selector {
     width: 30%;
     float: left;
-    position: sticky;
+    position: inherit;
     z-index: 1000;
     margin-bottom: -5px;
 }
